fix: honk font on ios

--- a/src/components/Banner.module.css
+++ b/src/components/Banner.module.css
@@ -32,7 +32,7 @@
 	}
 
 	h3 {
-		font-family: "Honk", sans-serif;
+		font-family: "Honk", "Bungee", sans-serif;
 		font-size: 1.5rem;
 		text-shadow: -0.5px -0.5px 0 black, 0.5px -0.5px 0 black,
 			-0.5px 0.5px 0 black, 0.5px 0.5px 0 black;
