--- a/src/components/Grid.module.css
+++ b/src/components/Grid.module.css
@@ -227,7 +227,7 @@
 		bottom: 15%;
 		margin: auto;
 		width: 85%;
-		font-family: "Honk", "HonkB", sans-serif;
+		font-family: "Honk", "Bungee", sans-serif;
 		font-size: 1.5rem;
 		background: linear-gradient(to bottom, #d0dfff 0%, #6f92de 100%);
 		border: none;
