--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,15 +7,16 @@
 }
 
 @font-face {
-	font-family: "HonkB";
-	src: url("/fonts/HonkRegular.woff2") format("woff2");
+	font-family: "Honk";
+	src: url("/public/fonts/Honk-Regular-VariableFont_MORF,SHLN.ttf")
+		format("truetype");
 	font-weight: 400;
 	font-display: swap;
 }
+
 @font-face {
-	font-family: "Honk";
-	src: url("/public/fonts/Honk-Regular-VariableFont_MORF\,SHLN.ttf")
-		format("truetype");
+	font-family: "Bungee";
+	src: url("/fonts/BungeeSpice-Regular.ttf") format("truetype");
 	font-weight: 400;
 	font-display: swap;
 }
